--- a/TODO
+++ b/TODO
@@ -416,13 +416,6 @@
 - Build htdocs/.htaccess file as part of 'make all'.
 - Add hook for links to mobile versions of URLs (view.php).
 	Probably should add a subdirectory underneath "plugins".
-- NPR news site:
-  Normal URL:
-  http://www.npr.org/templates/story/story.php?storyId=129780261
-  iPad-optimized URL:
-  http://www.npr.org/tablet/#story?storyId=129780261
-	Other iPad-optimized sites:
-  http://www.apple.com/ipad/ready-for-ipad/
 - For error messages, and any other time when the app needs to talk to
   the user: could create a synthetic feed. This could include error
   messages from update.php, warnings that a feed has been redirected
@@ -470,8 +463,6 @@
   threaded and non-threaded code.
 	See
   http://www.davidflanagan.com/javascript5/display.php?n=17-8&f=17/DataEvent.js
-- Since all the browsers I care about seem to have the JSON object,
-  use JSON.parse("...") instead of eval("...").
 - Could build an object to coordinate asynchronous activities:
 	var checkpoint = new waitForIt(cont_func, arg1, arg2, ...);
 	checkpoint.waitFor("this");
@@ -486,12 +477,12 @@
 	checkpoint.doneWith("theother");
   and once they've all checked in, checkpoint runs cont_func().
 - `items' table should include a field saying when the read/unread
-  state (and other metadata) was last updated. That way, it updates
-  come from multiple devices at the same time (e.g. I go outside, and
-  updates accumulate on mobile device; then I go to desktop machine
-  and start marking articles there; then the mobile device finds the
-  network and sends the updates it had cached), the back-end can use
-  only the latest update.
+  state (and other metadata) was last updated (mtime). That way, it
+  updates come from multiple devices at the same time (e.g. I go
+  outside, and updates accumulate on mobile device; then I go to
+  desktop machine and start marking articles there; then the mobile
+  device finds the network and sends the updates it had cached), the
+  back-end can use only the latest update.
 	Perhaps add this to 'feeds' and any other tables as well?
 - It'd be nice if PLUGIN_DIR could optionally be an array.
   Unfortunately, PHP constants have to be scalars.
@@ -500,25 +491,13 @@
   year's changes.
 	Should also have a NEWS file with changes users might care
   about.
-- Washington Post World feed starts with
-	<?xml version="1.0" encoding="iso-8859-1"?>
-  But content is really UTF-8. Can this be fixed in a hook? Can this
-  be a hook to the XML parser, or do we need to fix the text of the
-  feed before passing it along to be parsed?
-	Probably the latter. There's an
-  xml_set_processing_instruction_handler(), but presumably it gets
-  called only after the PI has been read.
-- Break up main index page into sections:
-	Active, non-stale feeds
-	Active stale feeds
-	Inactive feeds
 - update_feed (net.inc) is inconsistent in its return value.
 	Presumably in case of error should return a tuple giving the
   error status and an error message.
 - Feed maintenance: feeds go stale, get deleted, etc. all the time.
   It'd be really nice if the index page showed the ones with errors.
 	Check the HTTP status: if it's 4xx, then the feed is dead.
-- Get rid of unused skins: default, fancy2.
+- Get rid of unused skins: default.
 	Make "fancy" the new default. Maybe just rename it to
   "default".
 - High Performance JS book:
@@ -573,22 +552,15 @@
   - Set the expiration time on pages, so that they get cached. By
     convention, caching for slightly less than a year means forever.
     But also want to pick up new versions. A week, maybe?
-- Can Rhino be used to check JS syntax and whatnot?
-  https://developer.mozilla.org/en/Rhino
-	What about profiling?
 - Is it really worth keeping JS-specific stylesheets?
 - Try compressing JS/CSS/etc. to save bandwidth
   - Figure out how to do this with Apache
   - 'make install' needs to compress files
-- Perhaps get a JavaScript compacter: utility to remove blanks,
-  comments, etc. from files.
-- How does AIG add a custom font?
-  (Only shows up in Safari for me.)
-  http://blogs.answersingenesis.org/blogs/ken-ham/2010/05/18/is-groupon-anti-christian/
 - Articles with only content, no summary, should also be collapsible.
 	Set the max. height
+- Does it make sense to have 'onclick="javascript:foo"'? Or can we
+  just have 'onclick="foo"'?
 - Use addEventListener() instead of on*=script
-- Use addEventListener("DOMContentLoaded"...) instead of "onload".
 - Bookmarklet to mark an article as read.
 	If I stumble across, say, a Bad Astronomy article in Twitter,
   I don't want to read it again in the normal feed. It'd be nice to
@@ -685,14 +657,10 @@
 	ALTER TABLE items CHANGE COLUMN url url VARCHAR(255);
 	ALTER TABLE items CHANGE COLUMN comment_url comment_url VARCHAR(255);
 	ALTER TABLE items CHANGE COLUMN comment_rss comment_rss VARCHAR(255);
-- Ajax: "Clear changes" should go through list of items and uncheck
-  them.
-- Ajax feed update: use regular expressions to find lines in JSON
-  text. Text is sometimes truncated in the middle of a line, resulting
-  in parse errors.
 - Should be able to read both read and unread articles.
 - Would be nice to have either "new" flag or a "saved for later" flag.
-  The latter is probably more useful.
+  The latter is probably more useful. Similar to (Mobile?) Safari's
+  "Reading List" feature.
 	That way, can go through today's stuff fairly quickly, without
   having to scroll through messages you've already seen.
 	Perhaps make this a pseudo-feed (for which need support for
@@ -734,8 +702,6 @@
 	Use parse_url() to get hostname.
 	LJ friends feeds in OPML format:
   http://www.livejournal.com/tools/opml.bml?user=arensb
-- Tool to import feeds and items from existing Feed on
-  Feeds/Monkeychow database.
 - SQL schema should support folders, i.e., user can group feeds into
   categories. By default, all feeds go in a " root" folder (the
   leading space marks this as special; strip space from user-defined
@@ -822,16 +788,6 @@
   browser settings. Failing that, use a cookie or an option in the
   database.
 - Browser IDs:
-  Nokia N810 browser:
-  "Mozilla/5.0 (X11; U; Linux armv6l; en-US; rv:1.9a6pre) Gecko/20071128 Firefox/3.0a1 Tablet browser 0.2.2 RX-34+RX-44_2008SE_2.2007.51-3"
-
-  Nokia N810 RSS reader:
-  "gnome-vfs/2.16.3 neon/0.25.4"
-
-  Palm T|X browser:
-  "Mozilla/4.0 (compatible; MSIE 6.0; Windows 98; PalmSource/Palm-D050; Blazer/4.3) 16;320x320"
-	This can be used to pick a default skin.
-
   Wii browser:
   Opera/9.30 (Nintendo Wii; U; ; 3642; en)
 
@@ -853,16 +809,6 @@
 	'k'	move to previous item (vi key)
 	'd'	mark item as read, and skip to next item
 	'u'	mark item as unread, and skip to next item
-
-	Problem: attaching an event listener to each "item" element
-  doesn't work reliably: apparently Firefox doesn't understand
-  focus-follows-mouse, so it doesn't trigger as it should, when the
-  mouse is over a given item.
-	Besides, it's probably more efficient to just have a listener
-  on the window.
-	Perhaps can attach "mouseover" and "mouseout" listeners to
-  individual items: the last one that gets a mouseover is the current
-  item.
 - Plugin for XKCD: copy the alt text underneath the image, so you
   don't have to RTFS or "View Properties" to see it.
 	(Or, if you want to get fancy: abduct the tooltip stuff and
@@ -881,12 +827,6 @@
   <lj:posterid>
   <lj:reply-count>
   <lj:security>
-- Security: should probably try to parse the body of any foreign text
-  (in particular, summary and body of posts, as well as titles) to
-  include only known-good HTML.
-	Otherwise, vulnerable to XSS, e.g., by including JavaScript in
-  post.
-	Perhaps add a whitelist of trusted sites (e.g., APOD).
 - Per-feed options:
 	- Whether to display oldest-first by default (good for comics)
 	  or newest-first (good for news).
@@ -910,6 +850,9 @@
   OTOH, this means that the skin can't easily contain private elements
   like PHP include files, since those are (preferably) in a separate,
   directory, not visible by the web client.
+	Can probably initialize a template as a chunk of DOM, with
+  quick links to the interesting bits inside, then use cloneNode() to
+  instantiate it.
 - Should it be possible to have different skins for different feeds?
   E.g., for the Onion, just seeing the headlines (sometimes summaries)
   is sufficient. For This Modern World, might want a strip-frame at
@@ -928,6 +871,8 @@
   autogenerated stylesheet.
 	Perhaps can call this "outfit": modifies appearance by going
   over the skin, and is easy to change.
+	Perhaps split CSS into "appearance.css", for colors, images,
+  backgrounds, etc; and "layout.css" for everything else.
 - RSS doesn't provide content by default, just a summary
   (<description>). Perhaps add a hook after processing <item>, such
   that if there's a <description> but no <content:encoded> or such,
@@ -955,7 +900,6 @@
 	The Pain: no good anchors
 	Perry Bible Fellowship: "#topimg"
 	User Friendly: no good anchors
-- Add a way of marking an item as "saved for later".
 - Try to make a "collapsed" view for long articles that don't have a
   summary: clip to 10em or something.
 - A bunch of elements in the templates have id="..." identifiers
@@ -1013,16 +957,6 @@
 - Name: in "2001", Clarke described a tablet PC that served as a
   customized newspaper. Did he give it a name?
 	Yes: Newspad
-- Jira generates wonky RSS.
-	- https://issues.apache.org/
-	- Select 'Jira'
-	- Select a project (e.g., 'mod_python')
-	- Get a list of open bugs
-  The page has "RSS (Issues | Comments)". There's also a
-  '<link rel="alternate"' in the header that points to an RSS 0.92
-  feed. But the two are not identical.
-	The feed from <head> is non-conforming: it contains
-  nonstandard elements.
 - How should items.pub_time and items.last_update work together?
 	The intent is that if an article is first written on Jan. 1,
   then updated on Jan. 5, then it'll show up at the top of "today's
@@ -1031,12 +965,12 @@
 	- Some feeds don't include publishing or update times.
 	- Some feeds lie and give the current time for every item.
 	  (examples?)
-- Should probably combine "edit feed" and "unsubscribe from feed".
 - Navigation arrows ("Earlier"/"Later") should be based on the number
   of posts that match the display criteria. It is absurd to have an
   "Earlier" link on a page that also says "There are no items to
   display". Check numbers from db_get_feed_counts().
-- Try to unite update_feed() and update_all_feeds()
+	Would it make more sense to have something like a horizontal
+  bar representing a timeline
 - LJ feeds give the same URL for "read more" and comments. Does it
   make sense to combine the two in item.tpl?
 - Ought to support categories. WaPo feeds, in particular, have lots of
@@ -1085,10 +1019,6 @@
 	http://www.imageabstraction.com/gallery/index.php?action=showpic&cat=11&pic=58
 	http://www.imageabstraction.com/gallery/index.php?action=showpic&cat=11&pic=59
 	http://www.imageabstraction.com/gallery/index.php?action=showpic&cat=10&pic=90
-- When collapsing an item to just show the summary, scroll the window
-  so that the article doesn't move: if clicking the bottom collapse
-  bar, scroll so that the bottom of the item remains at the same
-  position in the window.
 - Icon for iPhone: see
   http://developer.apple.com/safari/library/documentation/InternetWeb/Conceptual/iPhoneWebAppHIG/MetricsLayout/MetricsLayout.html#//apple_ref/doc/uid/TP40007900-CH6-SW31
   http://developer.apple.com/safari/library/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html
@@ -1118,13 +1048,6 @@
   Can set to "default", "black", or "black-translucent".
 	I think this only works on full-on mobile apps, though.
 - HTML5 database:
-  http://dev.w3.org/html5/webdatabase/
-	window.openDatabase()
-  openDatabase works in Chrome, desktop and mobile Safari, but not
-  Firefox 3.5 or 3.6
-	Perhaps use js/load_module to load a class that'll store and
-  retrieve stuff in local storage.
-	!!! The above is deprecated. It is being replaced by:
 	http://www.w3.org/TR/IndexedDB/
   However, this isn't currently supported on any browser that I care about.
   (Thu Jul  7 18:24:36 2011)
