Credits for Ajax-loader.gif.

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,3 +24,7 @@ http://creativecommons.org/licenses/publicdomain/
 blue-bg.jpg: adapted from
 http://commons.wikimedia.org/wiki/Image:Abstract_blue_background7.jpg
 (scaled and made tilable with the Gimp)
+
+Ajax-loader.gif: downloaded from
+http://commons.wikimedia.org/wiki/File:Ajax-loader.gif
+Fri Nov 4 2011
