--- a/TODO
+++ b/TODO
@@ -37,17 +37,11 @@
   (if possible, only do entity translation, and throw out any markup).
 - Bug: On android, often title bar overflows to the right of the
   screen.
+- Remove purple-gradient.png: not used. Not likely to ever be used,
+  especially with CSS gradients.
 - Move event handlers over to bind_event().
 	Fix update_feed(id) to work with bind_event (i.e., take only
   one argument).
-- Guideline: Apple recommends using 'delete' to free up memory and
-  help the garbage collector. Basically, any time you have
-	var my_foo = new Foo;
-  write
-	delete my_foo;
-  wherever you're done with it.
-	Also, use 'var', to make variables local (so they can be
-  destroyed when they go out of scope).
 - Split up htdocs/view.php into presentation and content.
 	htdocs/view.php invokes the skin, which in turn sets JS
   variables from skin variables (feed_id, offset, and whatever other
@@ -538,6 +532,14 @@
 - Get rid of unused skins: default.
 	Make "fancy" the new default. Maybe just rename it to
   "default".
+- Guideline: Apple recommends using 'delete' to free up memory and
+  help the garbage collector. Basically, any time you have
+	var my_foo = new Foo;
+  write
+	delete my_foo;
+  wherever you're done with it.
+	Also, use 'var', to make variables local (so they can be
+  destroyed when they go out of scope).
 - High Performance JS book:
   - Move <script> tags to the bottom of <body>: loading scripts blocks,
     so this at least shows HTML to the user while the JS loads.
