No longer using blue-bg.jpg. Using gray-bg.jpg instead.

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,7 +21,7 @@ and resized to 18x18 pixels.
 http://creativecommons.org/licenses/publicdomain/
 )
 
-blue-bg.jpg: adapted from
+gray-bg.jpg: adapted from
 http://commons.wikimedia.org/wiki/Image:Abstract_blue_background7.jpg
 (scaled and made tilable with the Gimp)
 
