--- a/TODO
+++ b/TODO
@@ -37,6 +37,18 @@
   (if possible, only do entity translation, and throw out any markup).
 - Bug: On android, often title bar overflows to the right of the
   screen.
+- Pressing collapse bar on Android doesn't work. Need to press the
+  little down-arrow.
+- js/debug.js is obsolete, I think: Firefox 6, Chrome, etc. all should
+  have decent web consoles. Just use
+	console.{debug,info,warn,error}("msg");
+	console.dir(object) to display its structure (Chrome, not
+  Firefox 7)
+  See
+  https://developer.mozilla.org/en/Using_the_Web_Console
+	Then again, might want to use it just to define a dummy
+  console object for browsers that don't define it. Or to provide
+  cross-browser compatibility functions.
 - Move event handlers over to bind_event().
 	Fix update_feed(id) to work with bind_event (i.e., take only
   one argument).
@@ -63,8 +75,6 @@
   http://www.google.com/intl/en/webmasters/+1/button/index.html
 	Facebook: this, or something related?:
   http://developers.facebook.com/docs/reference/plugins/send/
-- <noscript> in feeds.php apparently breaking xmllint --html
-  Just get rid of it?
 - markitem code in view.jsh is old and crufty. Fix it.
 	Use AJAX call from xhr.
 - Perhaps have "login" as an AJAX service. Send credentials to a
@@ -110,6 +120,15 @@
   page.
 - Feeds page drop-down menus: use an onclick to toggle menu on and
   off, for mobile devices and such.
+- Hint: To create a DOM node from an HTML fragment:
+  http://stackoverflow.com/questions/494143/how-do-i-create-a-new-dom-element-from-an-html-string-using-built-in-dom-methods
+	// HTML string
+	var s = '<li>text</li>';
+
+	var div = document.createElement('div');
+	div.innerHTML = s;
+	var elements = div.childNodes;
+  (or div.firstChild if you know there's only one, obviously)
 - Editing feed details: instead of (or in addition to) a separate
   "edit feed" page, have an "edit" button on the page for a given
   feed. When clicked, highlight the parts that can be edited: title
