--- a/TODO
+++ b/TODO
@@ -1,7 +1,3 @@
-- Bug: fancy skin: when Ajax updates feeds, it doesn't notice updates
-  to the list of feeds.
-	Perhaps when updating all, update.php should append a list of
-  known feeds. If it's out of date, JS can request a full list.
 - Bug?: There are some old articles in the database. Why aren't they
   being cleaned out properly?
 	db_update_feed() only cleans out whichever feed it was called
@@ -37,15 +33,15 @@
   (if possible, only do entity translation, and throw out any markup).
 - Bug: On android, often title bar overflows to the right of the
   screen.
-- Pressing collapse bar on Android doesn't work. Need to press the
-  little down-arrow.
-- js/debug.js is obsolete, I think: Firefox 6, Chrome, etc. all should
-  have decent web consoles. Just use
+- js/debug.js: Firefox 6, Chrome, etc. all should have decent web
+  consoles. Just use
 	console.{debug,info,warn,error}("msg");
 	console.dir(object) to display its structure (Chrome, not
   Firefox 7)
   See
   https://developer.mozilla.org/en/Using_the_Web_Console
+	FF3 (probably) doesn't have it, so make js/debug.js have a
+  null console object, with empty methods.
 	Then again, might want to use it just to define a dummy
   console object for browsers that don't define it. Or to provide
   cross-browser compatibility functions.
