*** empty log message ***

--- a/TODO
+++ b/TODO
@@ -38,6 +38,9 @@
 - Bug: On android, often title bar overflows to the right of the
   screen.
 - Template.expand should return a DOM object, not a string.
+- Kindle: Add "kindle" to mobile:
+	Mozilla/5.0 (X11; U; Linux armv7l like Android; en-us) AppleWebKit/531.2+ (KHTML, like Gecko) Version/5.0 Safari/533.2+ Kindle/3.0+
+- Kindle: make checkboxes bigger.
 - Integrate keybinding stuff into PatEvent.
 - Should get rid of "Apply Changes" button. Also probably
   "Earlier"/"Later" links.
