--- a/TODO
+++ b/TODO
@@ -63,11 +63,15 @@
   and different people may deal with this differently (UTF-8 vs. HTML
   entities). Perhaps safest to assume that they're HTML and clean up
   (if possible, only do entity translation, and throw out any markup).
-- Bug: On android, often title bar overflows to the right of the
-  screen.
 - Sync: "updates.php" only returns up to 100 updates. When syncing, if
   we get 100 updates, ought to call it again, to see whether maybe
   there's more that we've missed.
+	Perhaps MySQL found_rows() function can be used here: figure
+  out whether there are more results, and add a "{more: true}" element
+  at the end of the JS results.
+- WebStorage spec (http://www.w3.org/TR/webstorage/) says that when a
+  value in localStorage is modified, it triggers an event in other
+  Windows that have access to that database. This could be useful.
 - Perhaps add Xdebug extension for PHP: profiler.
 - Speed: jsonify() is apparently quite a time hog: adds ~15% time
   to just using json_encode().
@@ -178,9 +182,6 @@
 - Perhaps have "login" as an AJAX service. Send credentials to a
   password-protected page; have the page send back a JSON status
   message and a cookie that can be used to retrieve the other pages.
-- "Display" menu on feeds page:
-  - Toggle empty feeds (no unread posts)
-  - Toggle stale feeds
 - Maybe ought to store a feed's language, so that we can figure out
   how to sort its name correctly in the main feed display (e.g.,
   "Le Monde" (fr) => "MONDE LE", and "El Mundo" (es) => "MUNDO EL").
@@ -254,9 +255,6 @@
   getElementsByTagNameNS("http://namesp.ace/URL", "*");
   See
   http://www.w3.org/TR/2000/REC-DOM-Level-2-Core-20001113/core.html#ID-A6C9094
-- Key bindings
-	'c' - collapse current article
-	'e' - expand current article
 - Publisher guidelines from readability.com:
   http://www.readability.com/publishers/guidelines/
   This should make things show up better in Safari Reader.
@@ -357,16 +355,8 @@
   collect statistics and see which plugins run when. In particular, we
   want to see when a plugin stops working because the feed changed the
   format of its web bugs or whatever.
-- Perhaps just assume that any device worth developing for is going to
-  have JavaScript enabled?
 - Should the username and password be stored locally, so that the
   cookie can be renewed automatically as needed?
-- CacheManager.js: using item ID and feed ID as key in local memory
-  seems intuitive, but I think JS interprets them as integers, and
-  assumes that it's dealing with an array. Perhaps use "f123" and
-  "i123456" to force them to be strings.
-	Or more generally: <type>:<id>, where <type> is a string like
-  "feed" or "item", and <id> is the integer ID.
 - Standalone app: put up a spinner or something when updating cache.
 	See downspout:/folks/htdocs/app/app.js
   Could perhaps use u256d-u2570 (probably not, though), or u2596-u259f,
@@ -559,14 +549,6 @@
 	checkpoint.doneWith("that");
 	checkpoint.doneWith("theother");
   and once they've all checked in, checkpoint runs cont_func().
-- `items' table should include a field saying when the read/unread
-  state (and other metadata) was last updated (mtime). That way, it
-  updates come from multiple devices at the same time (e.g. I go
-  outside, and updates accumulate on mobile device; then I go to
-  desktop machine and start marking articles there; then the mobile
-  device finds the network and sends the updates it had cached), the
-  back-end can use only the latest update.
-	Perhaps add this to 'feeds' and any other tables as well?
 - It'd be nice if PLUGIN_DIR could optionally be an array.
   Unfortunately, PHP constants have to be scalars.
 - Maybe just give up on maintaining ChangeLog. Just use 'svn log -r
@@ -574,9 +556,6 @@
   year's changes.
 	Should also have a NEWS file with changes users might care
   about.
-- update_feed (net.inc) is inconsistent in its return value.
-	Presumably in case of error should return a tuple giving the
-  error status and an error message.
 - Feed maintenance: feeds go stale, get deleted, etc. all the time.
   It'd be really nice if the index page showed the ones with errors.
 	Check the HTTP status: if it's 4xx, then the feed is dead.
@@ -640,10 +619,6 @@
   - Set the expiration time on pages, so that they get cached. By
     convention, caching for slightly less than a year means forever.
     But also want to pick up new versions. A week, maybe?
-- Is it really worth keeping JS-specific stylesheets?
-- Try compressing JS/CSS/etc. to save bandwidth
-  - Figure out how to do this with Apache
-  - 'make install' needs to compress files
 - Articles with only content, no summary, should also be collapsible.
 	Set the max. height
 - Does it make sense to have 'onclick="javascript:foo"'? Or can we
@@ -674,9 +649,6 @@
   http://developer.apple.com/safari/library/documentation/AppleApplications/Reference/SafariWebContent/OptimizingforSafarioniPhone/OptimizingforSafarioniPhone.html
 - Make updates smarter about updating when no network available.
   On iPhone, don't contact the network if there's no network to contact.
-- Add an entry in the 'options' table, saying which version/revision
-  of Newsbite this is, and perhaps another saying which version of the
-  schema.
 - Ads: perhaps should generalize: look for
   <a href="$some_ad_url">...</a>, optionally wrapped in <p>...</p>.
 - WaPo duplicates: "Today's Highlights" can duplicate stories from
@@ -733,8 +705,6 @@
 	- Mark as read and move to next article
 	- Mark as unread?
 	- Refresh list of articles
-- Link on feeds page (in both skins) to show inactive feeds, with
-  option to reactivate them.
 - Need tool to fix database schema.
 	ALTER TABLE items CHANGE COLUMN url url VARCHAR(255);
 	ALTER TABLE items CHANGE COLUMN comment_url comment_url VARCHAR(255);
@@ -855,12 +825,6 @@
 	  custom tables.
 	- Before deleting a feed in the database. Perhaps to clean up
 	  custom tables.
-- Feed-parsing plugins: Need to have a hook for items, and another for
-  feeds. Don't do this as post-element hooks, because the plugin
-  shouldn't be expected to know which element represents an item/feed.
-	Also, if plugins add stuff to the bottom of the article text,
-  want to give the user some control over the order in which they get
-  called.
 - i18n.
 	Can start by identifying translatable strings and marking
   them, so they can be translated later. Define dummy _() and N_()
@@ -891,10 +855,6 @@
 	'k'	move to previous item (vi key)
 	'd'	mark item as read, and skip to next item
 	'u'	mark item as unread, and skip to next item
-- Plugin for XKCD: copy the alt text underneath the image, so you
-  don't have to RTFS or "View Properties" to see it.
-	(Or, if you want to get fancy: abduct the tooltip stuff and
-  write a replacement that shows the entire title, like Google does.)
 - LiveJournal plugin should look at the <description> and parse lj
   tags in the body of the item. E.g., expand '<lj:user="foo">' into
   proper HTML.
@@ -912,7 +872,6 @@
 - Per-feed options:
 	- Whether to display oldest-first by default (good for comics)
 	  or newest-first (good for news).
-	- Whether the feed contains BBcode (like top10).
 - Page to set global and per-feed options.
 - Icons for common actions:
 	- Refresh (feed, all feeds)
@@ -1078,23 +1037,11 @@
   that should never happen.
 - Perhaps expand the notion of "feed": could show email, current
   weather conditions, Nagios alerts, etc.
-- In main view: have a button to toggle displaying feeds with no
-  unread items. This could be difficult, since the color of rows is
-  set by their class, which in turn is in the template file.
-	JQuery could help with this. Or do it manually with JavaScript.
-- Plug-in for Atheist Nexus (and others): the body of the item is
-  presented as HTML, but is actually plain text, using \n\n as
-  paragraph separators. Add <p>...</p> tags.
 - Make things prettier:
 	- Background image
 	- Perhaps translucent elements/backgrounds
 	- Button bars with gradient backgrounds
-- Possible backgrounds:
-	http://www.imageabstraction.com/gallery/index.php?action=showpic&cat=11&pic=64
-	http://www.imageabstraction.com/gallery/index.php?action=showpic&cat=11&pic=57
-	http://www.imageabstraction.com/gallery/index.php?action=showpic&cat=11&pic=58
-	http://www.imageabstraction.com/gallery/index.php?action=showpic&cat=11&pic=59
-	http://www.imageabstraction.com/gallery/index.php?action=showpic&cat=10&pic=90
+- Possible backgrounds at http://www.imageabstraction.com/
 - Icon for iPhone: see
   http://developer.apple.com/safari/library/documentation/InternetWeb/Conceptual/iPhoneWebAppHIG/MetricsLayout/MetricsLayout.html#//apple_ref/doc/uid/TP40007900-CH6-SW31
   http://developer.apple.com/safari/library/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html
@@ -1127,6 +1074,7 @@
 	http://www.w3.org/TR/IndexedDB/
   However, this isn't currently supported on any browser that I care about.
   (Thu Jul  7 18:24:36 2011)
+	Looks like Firefox 12 has it (Sun May  6 10:16:11 2012)
 - Mobile Safari (and presumably other mobile browsers) allows looking
   up the current location using GPS or whatever. This means that it
   should, in principle, be possible to have location-based profiles.
