*** empty log message ***

--- a/TODO
+++ b/TODO
@@ -2,6 +2,11 @@
   button doesn't.
 - Bug: Title link to Pharyngula articles is sometimes "Array".
   Ditto Greta Christina.
+	Fri May 25 16:49:36 2012: Saw this with Fake Science (see
+  "tests/fakescience.rss"), story "Einstein is sick of being silly.
+  See the rest on the full page...".
+  	Oddly, the problem only appears on "view.php?id=all", not on
+  the feed-specific page ("view.php?id=286").
 - Bug: When I changed the feed URL for The Atheist Experience, the
   posts appear out of order: last_update is when it was refreshed, but
   the pub_date is when the post was published:
